src/styles/base.scss
/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Prevent font size inflation */
html {
  -moz-text-size-adjust: none;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
}

:root {
  // Algolia customizations
  --docsearch-primary-color: var(--amplify-colors-brand-primary-60);
  --docsearch-modal-background: var(--amplify-colors-background-primary);
  --docsearch-modal-shadow: var(--amplify-shadows-small);
  --docsearch-footer-background: var(--amplify-colors-background-primary);
  --docsearch-footer-shadow: none;
  --docsearch-hit-shadow: none;
  --docsearch-hit-background: var(--amplify-colors-background-secondary);
  --docsearch-hit-color: var(--amplify-colors-font-primary);
  --docsearch-key-gradient: var(--amplify-colors-overlay-10);
  --docsearch-key-shadow: none;
  --docsearch-muted-color: var(--amplify-colors-font-tertiary);
  --docsearch-searchbox-focus-background: transparent;
  --docsearch-icon-color: var(--amplify-colors-font-disabled);
}

/* Remove default margin in favour of better control in authored CSS */
body,
h1,
h2,
h3,
h4,
p,
figure,
blockquote,
dl,
dd {
  margin: 0;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role='list'],
ol[role='list'] {
  list-style: none;
}

/* Set core body defaults */
body {
  min-height: 100vh;
  line-height: var(--amplify-line-heights-medium);
  color: var(--amplify-colors-font-primary);
}

/* Set shorter line heights on headings and interactive elements */
h1,
h2,
h3,
h4,
button,
input,
label {
  line-height: var(--amplify-line-heights-small);
}

/* Balance text wrapping on headings */
h1,
h2,
h3,
h4 {
  text-wrap: balance;
}

/* Style heading links */
h2,
h3 {
  a:not([class]) {
    color: var(--amplify-colors-font-primary);
    text-decoration: none;

    &:hover {
      text-decoration: underline;
    }
  }
}

.main {
  & > h2,
  & > h3 {
    scroll-margin-block: 9rem;
  }
}

a,
.amplify-link {
  text-decoration-skip-ink: auto;

  color: var(--amplify-components-link-color);
  text-decoration: underline;

  &:hover {
    text-decoration: none;
  }

  &:focus {
    outline: 2px solid var(--amplify-colors-border-focus);
  }
}

/* Make images easier to work with */
img,
picture {
  max-width: 100%;
  display: block;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
  font: inherit;
}

/* Make sure textareas without a rows attribute are not tiny */
textarea:not([rows]) {
  min-height: 10em;
}

.max-headline-content {
  max-width: 60ch;
}

.max-inline-content {
  max-width: 80ch;
}

ul {
  margin: 0;
}

.main {
  .amplify-heading--2,
  .amplify-heading--3 {
    scroll-margin-top: 9rem;
  }
}

.internal-link-button {
  gap: var(--amplify-space-small);
}

